[package]
name = "wxbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.2"
hex = "0.4"
sha1 = "0.10.5"
cbc = "0.1.2"
aes = "0.8"
